--- a/package.json
+++ b/package.json
@@ -37,12 +37,15 @@
     "i18next": "^22.4.12",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.2.0",
+    "jalali-moment": "^3.3.11",
+    "moment": "^2.29.4",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-app-polyfill": "^2.0.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-i18next": "^9.0.10",
+    "react-moment": "^1.1.3",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
